# python-functools-decorators

./: .coverage  .gitignore  LICENSE  PythonSettings.json  README.md  coverage.xml  decotest.py  functools_examples.py  main.py  pyproject.toml  view-coverage.ps1  wraps_examples.py
tests/: README.md  __init__.py  test_decotest.py  test_functools_examples.py  test_main.py  test_wraps_examples.py
